// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(1) Default render 1`] = `
<div
  className="entry-votes notranslate"
>
  <span
    className="inner-btn"
    onClick={[Function]}
    title="10 Votes"
  >
    <svg
      viewBox="0 0 24 24"
    >
      <path
        d="M16 17V19H2V17S2 13 9 13 16 17 16 17M12.5 7.5A3.5 3.5 0 1 0 9 11A3.5 3.5 0 0 0 12.5 7.5M15.94 13A5.32 5.32 0 0 1 18 17V19H22V17S22 13.37 15.94 13M15 4A3.39 3.39 0 0 0 13.07 4.59A5 5 0 0 1 13.07 10.41A3.39 3.39 0 0 0 15 11A3.5 3.5 0 0 0 15 4Z"
        fill="currentColor"
      />
    </svg>
     
    10
  </span>
</div>
`;

exports[`(2) No votes 1`] = `
<div
  className="entry-votes notranslate"
>
  <span
    className="inner-btn no-data"
    title="No Votes"
  >
    <svg
      viewBox="0 0 24 24"
    >
      <path
        d="M16 17V19H2V17S2 13 9 13 16 17 16 17M12.5 7.5A3.5 3.5 0 1 0 9 11A3.5 3.5 0 0 0 12.5 7.5M15.94 13A5.32 5.32 0 0 1 18 17V19H22V17S22 13.37 15.94 13M15 4A3.39 3.39 0 0 0 13.07 4.59A5 5 0 0 1 13.07 10.41A3.39 3.39 0 0 0 15 11A3.5 3.5 0 0 0 15 4Z"
        fill="currentColor"
      />
    </svg>
     
    0
  </span>
</div>
`;

exports[`(3) Render of detail with votes 1`] = `
Array [
  <div
    className="voters-list"
  >
    <div
      className="list-body"
    >
      <div
        className="list-item"
      >
        <div
          className="item-main"
        >
          <a
            href="/@user1"
            onClick={[Function]}
          >
            <span
              className="user-avatar small"
              style={
                Object {
                  "backgroundImage": "url(https://images.ecency.com/u/user1/avatar/small)",
                }
              }
            />
          </a>
          <div
            className="item-info"
          >
            <a
              className="item-name notransalte"
              href="/@user1"
              onClick={[Function]}
            >
              user1
            </a>
            <span
              className="item-reputation"
            >
              76
            </span>
          </div>
        </div>
        <div
          className="item-extra"
        >
          $ 125.037
          <span
            className="separator"
          />
          0.4 %
          <span
            className="separator"
          />
          <span
            title="2020-01-01 23:12:00"
          >
            3 days ago
          </span>
        </div>
      </div>
      <div
        className="list-item"
      >
        <div
          className="item-main"
        >
          <a
            href="/@user2"
            onClick={[Function]}
          >
            <span
              className="user-avatar small"
              style={
                Object {
                  "backgroundImage": "url(https://images.ecency.com/u/user2/avatar/small)",
                }
              }
            />
          </a>
          <div
            className="item-info"
          >
            <a
              className="item-name notransalte"
              href="/@user2"
              onClick={[Function]}
            >
              user2
            </a>
            <span
              className="item-reputation"
            >
              77
            </span>
          </div>
        </div>
        <div
          className="item-extra"
        >
          $ 0.058
          <span
            className="separator"
          />
          100.0 %
          <span
            className="separator"
          />
          <span
            title="2020-01-01 23:12:00"
          >
            3 days ago
          </span>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="list-tools"
  >
    <div
      className="pages"
    >
      <span />
    </div>
    <div
      className="sorter"
    >
      <span
        className="label"
      >
        Sort
      </span>
      <select
        className="form-control"
        onChange={[Function]}
        value="reward"
      >
        <option
          value="reward"
        >
          Reward
        </option>
        <option
          value="timestamp"
        >
          Time
        </option>
        <option
          value="reputation"
        >
          Reputation
        </option>
        <option
          value="percent"
        >
          Percentage
        </option>
      </select>
    </div>
  </div>,
]
`;
